# orderbook

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
bench/: harness.cpp
docs/: order_book_design.md
include/: matching_engine.hpp  object_pool.hpp  order_book.hpp  types.hpp
src/: itch_adapter.cpp  itch_adapter.hpp  main.cpp  replay_support.hpp
tests/: scaffold_test.cpp  test_matching_engine.cpp  test_object_pool.cpp  test_order_book.cpp  test_types.cpp
